# AccessorFramework

./: .gitignore  CMakeLists.txt  README.md  pipeline.yml
buildsystem/templates/: linux.yml  windows.yml
buildsystem/toolchains/: aarch64-linux-gnu.cmake  arm-linux-gnueabi.cmake  arm-linux-gnueabihf.cmake
cmake/: AccessorFrameworkConfig.cmake.in
examples/: ExampleHost.cpp  ExampleHost.h  IntegerAdder.cpp  IntegerAdder.h  SpontaneousCounter.cpp  SpontaneousCounter.h  SumVerifier.cpp  SumVerifier.h  main.cpp
include/AccessorFramework/: Accessor.h  Event.h  Host.h
src/: Accessor.cpp  AccessorImpl.cpp  AccessorImpl.h  AtomicAccessorImpl.cpp  AtomicAccessorImpl.h  BaseObject.h  CancellationToken.h  CompositeAccessorImpl.cpp  CompositeAccessorImpl.h  Director.cpp  Director.h  Host.cpp  HostHypervisorImpl.cpp  HostHypervisorImpl.h  HostImpl.cpp  HostImpl.h  Port.cpp  Port.h  PrintDebug.h  UniquePriorityQueue.h
test/: CMakeLists.txt
test/src/: CommonAccessorTests.cpp  DynamicSumVerifierTests.cpp
test/src/TestCases/: BasicAccessorTests.cpp  BasicHostTests.cpp  DynamicSumVerifierTests.cpp  SumVerifierTests.cpp
test/src/TestClasses/: DynamicIntegerAdder.h  DynamicSumVerifier.h  DynamicSumVerifierHost.h  EmptyHost.h  IntegerAdder.h  SpontaneousCounter.h  SumVerifier.h  SumVerifierHost.h
